After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670700 - GPS coordinates don't show latitude
GPS coordinates don't show latitude
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: image viewer
3.2.x
Other Linux
: Normal trivial
: GNOME3.4
Assigned To: EOG Maintainers
EOG Maintainers
: 671178 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-02-23 18:11 UTC by Michel Wurtz
Modified: 2012-03-05 19:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screendump showing correct localisation, incomplète EXIF information (129.11 KB, image/jpeg)
2012-02-23 18:11 UTC, Michel Wurtz
Details
Sample jpeg image with exif data (50.79 KB, image/jpeg)
2012-02-23 23:38 UTC, Michel Wurtz
Details

Description Michel Wurtz 2012-02-23 18:11:15 UTC
Created attachment 208293 [details]
Screendump showing correct localisation, incomplète EXIF information

When opening image properties >> details (exif informations) >> GPS data, only longitude and elevation are shown. The latitude is forgotten.  This occurs at least on the french version.  The MAP plugin show the image at the right place.

Screendump as attachement.
Comment 1 Felix Riemann 2012-02-23 23:00:56 UTC
Can you attach a sample image?
I just tried with my GPS sample images and they show the longitude correctly.

The longitude values are probably hidden behind the Interoperabiliy tags that are (incorrectly) shown in GPS tag as IIRC their Exif IDs collide with the Longitude tags.
Comment 2 Michel Wurtz 2012-02-23 23:38:22 UTC
Created attachment 208313 [details]
Sample jpeg image with exif data

In the sample image, GPS fields are filled with gpscorrelate, v 1.6.1
Comment 3 Felix Riemann 2012-02-24 19:15:58 UTC
Okay, I can see the problem now. That's an internal problem that the Interoperablity Tags override the already set GPS Longitude values.

Not sure how to work around this.
Comment 4 Michel Wurtz 2012-02-24 20:40:14 UTC
(In reply to comment #3)
> Okay, I can see the problem now. That's an internal problem that the
> Interoperablity Tags override the already set GPS Longitude values.
> 
> Not sure how to work around this.

In fact, the longitude is OK. It's the latitude who is overriden.
Comment 5 Felix Riemann 2012-02-25 10:56:45 UTC
(In reply to comment #4)
> In fact, the longitude is OK. It's the latitude who is overriden.

Oh, yes. I'm mixing them up all the time. :)
Comment 6 Felix Riemann 2012-02-26 14:55:46 UTC
commit 38f49dca4785b2e1a36c9c1fe6ba7d9c84f022a0
Author: Felix Riemann <>
Date:   Sun Feb 26 15:51:23 2012 +0100

    EogExifDetails: Take Exif IFD into account when creating hash keys
    
    This should solve conflicts with Exif values that have the same number
    but are stored in different IFD blocks (e.g GPS and Interoperability).
    
    https://bugzilla.gnome.org/show_bug.cgi?id=670700
---
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Comment 7 Felix Riemann 2012-03-02 17:34:43 UTC
*** Bug 671178 has been marked as a duplicate of this bug. ***