EomExifDetails: Take Exif IFD into account when creating hash keys

This should solve conflicts with Exif values that have the same number
but are stored in different IFD blocks (e.g GPS and Interoperability).

https://bugzilla.gnome.org/show_bug.cgi?id=670700

origin commit:
https://gitlab.gnome.org/GNOME/eog/commit/38f49dc